[tool.poetry]
name = "data-worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_worker"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
